# AccedeSimple

./: .devcontainer.json  .gitignore  AccedeSimple.sln  README.md  accedesimple.tour  azure.yaml
.config/: dotnet-tools.json
AccedeSimple.EvalTests/: AccedeSimple.EvalTests.csproj  RetrievalEvaluation.cs
docs/: project-plan.md  solution-architecture.md
src/AccedeSimple.AppHost/: AccedeSimple.AppHost.csproj  Program.cs
src/AccedeSimple.AppHost/Properties/: launchSettings.json
src/AccedeSimple.Domain/: UserIntent.cs
src/AccedeSimple.Domain/Approvals/: ApprovalAnalysis.cs  ApprovalDetails.cs  ApprovalRequest.cs  ApprovalResponse.cs  ApprovalState.cs
src/AccedeSimple.Domain/Bookings/: BookingState.cs  BookingTypes.cs
src/AccedeSimple.Domain/Expenses/: ExpenseApproval.cs  ExpenseCategory.cs  ExpenseReport.cs
src/AccedeSimple.Domain/Shared/: DateRange.cs  LocalGuideResponse.cs  ReceiptData.cs  RejectionReason.cs
src/AccedeSimple.Domain/Trips/: TripDetails.cs  TripOption.cs  TripParameter.cs  TripRequest.cs
src/AccedeSimple.MCPServer/: AccedeSimple.MCPServer.csproj  Program.cs
src/AccedeSimple.Service/: AccedeSimple.Service.csproj  ChatStream.cs  Endpoints.cs  Extensions.cs  Program.cs  README.md  SamplingReporter.cs  StateStore.cs  appsettings.Development.json  appsettings.json  nuget.config
src/AccedeSimple.ServiceDefaults/: AccedeSimple.ServiceDefaults.csproj  Extensions.cs
src/localguide/: Dockerfile  main.py  pyproject.toml
src/webui/: Dockerfile  default.conf.template  index.html  package-lock.json  package.json
src/webui/src/: AppRouter.tsx
(+30 files in other folders)
